--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 include:
   - .well-known
-remote_theme: joshgerdes/jekyll-uno
+remote_theme: jekyll-theme-minimal
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
